# compliance-copilot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.kiro/hooks/: manual-sync-compliance-copilot.kiro.hook  sync-to-compliance-copilot.kiro.hook
compliance_extractor/: __init__.py  cli.py  connection.py  constants.py  errors.py  join_engine.py  models.py  retry.py  transform.py  validator.py
compliance_mcp/: __init__.py  api_client.py  config.py  models.py  server.py  utils.py  version_check.py
compliance_mcp/tools/: findings.py  lookup.py  review.py  stats.py
compliance_reviewer/: __init__.py  cli.py  errors.py  models.py  version_check.py
docs/: ARCHITECTURE.md  ROADBLOCKS.md
infrastructure/: app.py  stack.py
lambdas/: __init__.py
lambdas/cache_loader/: __init__.py  handler.py
lambdas/query/: __init__.py  handler.py
prompts/: default_review.md
scripts/: run_seed_cache.sh  seed_cache.py
tests/: __init__.py  test_next_sequence_number.py  test_oom_bug_condition.py  test_oom_preservation.py  test_orphaned_bug_condition.py  test_orphaned_preservation.py  test_overwrite_bug_condition.py  test_overwrite_preservation.py  test_query_handler.py  test_retry.py  test_transform_properties.py  test_transform_unit.py  test_version_check_api_bug_condition.py  test_version_check_api_preservation.py
