[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compliance-copilot"
version = "0.1.0"
description = "LLM-powered compliance review toolkit with serverless cache API and MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "boto3>=1.28.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "anyio>=4.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "moto[dynamodb,s3]>=5.0",
]

[project.scripts]
compliance-extract = "compliance_extractor.cli:main"
compliance-review = "compliance_reviewer.cli:main"
compliance-mcp = "compliance_mcp.server:main"

[tool.setuptools.packages.find]
include = ["compliance_extractor*", "compliance_reviewer*", "compliance_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
